--- a/opdracht-2-3/index.html
+++ b/opdracht-2-3/index.html
@@ -6,11 +6,35 @@
     <link rel="stylesheet" href="styles.css">
     <title>Flexbox opdracht 2 en 3</title>
 </head>
+
+
 <body>
-    <div>
-        <h1>All Your Business Data in One Place</h1>
-        <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-            analytics tools.</h3>
-    </div>
+<nav class="container-box-nav">
+    <p>ANALYTICA</p>
+    <ul>
+        <li>About us</li>
+        <li>Strategy</li>
+        <li>Prices</li>
+    </ul>
+</nav>
+
+<div class="header">
+    <h1>All Your Business Data in One Place</h1>
+    <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+        analytics tools.</h3>
+</div>
+<p></p>
+<div class="container-box">
+    <article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+    </article>
+    <article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+    </article>
+    <article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+    </article>
+</div>
 </body>
 </html>
+
